--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ["python311"]
 cmds = ["pip install -r requirements.txt"]
 
 [phases.build]
-cmds = ["python manage.py collectstatic --noinput"]
+cmds = ["python manage.py collectstatic --noinput --clear"]
 
 [start]
-cmd = "python manage.py migrate && gunicorn mi_portafolio.wsgi:application --bind 0.0.0.0:$PORT"
+cmd = "python manage.py migrate && gunicorn mi_portafolio.wsgi:application --bind 0.0.0.0:$PORT --log-file -"
